--- a/hotel.ipynb
+++ b/hotel.ipynb
@@ -1196,7 +1196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### In the next step, I will apply a Machine Learning algorithm to predict the price of a hotel room based on the time."
+    "#### In the next step, I will apply a Machine Learning algorithm to predict the possibility of a booking ."
    ]
   },
   {
