--- a/hotel.ipynb
+++ b/hotel.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
     "\n",
-    "# The Hotel Booking Dataset \n",
+    "<h2> The Hotel Booking Dataset </h2>\n",
     "\n",
     "\n",
     "### *Stay long and pay less*\n",
