--- a/hotel.ipynb
+++ b/hotel.ipynb
@@ -9,9 +9,10 @@
     "<h2> The Hotel Booking Dataset </h2>\n",
     "\n",
     "\n",
-    "### *Stay long and pay less*\n",
-    "- When is the most ideal time of year to reserve a hotel room?\n",
-    "- How long can you remain in a hotel room and spend the least amount of money?<br>\n",
+    "<b> *Stay long and pay less </b> \n",
+    <ul>
+    ",li> When is the most ideal time of year to reserve a hotel room?\n",
+    "<li> How long can you remain in a hotel room and spend the least amount of money?<br>\n", </ul>
     "<br>\n",
     "\n",
     "### In this notebook, we will investigate potential answers to such questions using the hotel booking dataset from: https://www.kaggle.com/jessemostipak/hotel-booking-demand\n",
