--- a/hotel.ipynb
+++ b/hotel.ipynb
@@ -8,27 +8,26 @@
     "\n",
     "<h2> The Hotel Booking Dataset </h2>\n",
     "\n",
+    "<ul>\n",
+    "<b><li> How often would people cancel ? </li>  </b>\n",
+    "<li> When is the most ideal time of year to reserve a hotel room? </li>\n",
+    "<li> How long can you remain in a hotel room and spend the least amount of money? </li> <br>\n",
+    "<br>\n",
+    "</ul>\n",
+    "<h4> In this notebook, we will investigate potential answers to such questions using the hotel booking dataset from: https://www.kaggle.com/jessemostipak/hotel-booking-demand to answer the primary question : Can we predict if a customer will cancel ? </h4>\n",
     "\n",
-    "<b> *Stay long and pay less </b> \n",
-    <ul>
-    ",li> When is the most ideal time of year to reserve a hotel room?\n",
-    "<li> How long can you remain in a hotel room and spend the least amount of money?<br>\n", </ul>
     "<br>\n",
     "\n",
-    "### In this notebook, we will investigate potential answers to such questions using the hotel booking dataset from: https://www.kaggle.com/jessemostipak/hotel-booking-demand\n",
+    "<h3> <b> Research questen : predicting the possibilty of a booking </b> </h3>\n",
     "\n",
-    "<br>\n",
-    "\n",
-    "### **Research questen : predicting the possibilty of a booking**\n",
-    "\n",
-    "## The notebook has three goals to address the research issues listed above:\n",
+    "The notebook has three goals to address the research issues listed above:\n",
     "1. Applying EDA on the dataset\n",
     "2.  Performing features engineering .\n",
     "3.  Training ML model .\n",
     "<br>\n",
     "\n",
     "\n",
-    "### The datset : \n",
+    "<h3> The datset : </h3>\n",
     " The data comes from Nuno Antonio, Ana Almeida, and Luis Nunes' article Hotel Booking Demand Datasets, published in Data in Brief Volume 22, February 2019.\n",
     " Thomas Mock and Antoine Bichat retrieved and cleaned the data for #TidyTuesday during the week of February 11th, 2020.\n",
     " This data collection provides **booking information for a city hotel and a resort hotel**, including dates of booking, duration of stay, number of individuals, children, and/or infants, and available parking spots, along with other variables.\n",
@@ -1197,12 +1196,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### In the next step, I will apply a Machine Learning algorithm to predict the possibility of a booking ."
+    "#### In the next step, I will apply a Machine Learning algorithm to predict the price of a hotel room based on the time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
